After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772407 - smart bookmarks are no longer working
smart bookmarks are no longer working
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Bookmarks
git master
Other Linux
: Normal normal
: ---
Assigned To: Michael Catanzaro
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-04 13:23 UTC by Adam Dingle
Modified: 2016-10-31 22:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Refresh completion model actions if smart bookmark changes (5.80 KB, patch)
2016-10-31 21:58 UTC, Michael Catanzaro
committed Details | Review
Filter smart bookmarks out of bookmarks popover (3.95 KB, patch)
2016-10-31 21:58 UTC, Michael Catanzaro
committed Details | Review
Restore smart bookmarks (12.12 KB, patch)
2016-10-31 21:58 UTC, Michael Catanzaro
committed Details | Review

Description Adam Dingle 2016-10-04 13:23:01 UTC
I just built Epiphany from master to try out some of the recent UI changes.  Unfortunately my existing smart bookmarks didn't work: when I typed text into the address bar, I didn't see a dropdown list with smart bookmarks listed below.

https://help.gnome.org/users/epiphany/stable/bookmark-smart.html.en
Comment 1 Michael Catanzaro 2016-10-20 13:07:23 UTC
I'm not sure when I'll be able to work on this, but I'll try to do it soon.

Since it has to be reimplemented from scratch, hopefully I will take the time to do it properly: as a search engine configuration preferences dialog, completely separate from the bookmarks subsystem.
Comment 2 Michael Catanzaro 2016-10-31 03:15:33 UTC
(In reply to Michael Catanzaro from comment #1)
> I'm not sure when I'll be able to work on this, but I'll try to do it soon.

FYI: I'm more than halfway done but it needs another weekend or two, will try to finish it soon.
Comment 3 Michael Catanzaro 2016-10-31 21:56:17 UTC
(In reply to Michael Catanzaro from comment #2)
> FYI: I'm more than halfway done but it needs another weekend or two, will
> try to finish it soon.

It went faster than expected.

(In reply to Michael Catanzaro from comment #1)
> Since it has to be reimplemented from scratch, hopefully I will take the
> time to do it properly: as a search engine configuration preferences dialog,
> completely separate from the bookmarks subsystem.

This is still pending. I think it's very important to make smart bookmarks actually accessible, especially since creating a smart bookmark is much tricker now than it used to be (as there's no way to set an arbitrary URL until after the bookmark is already created). But it can be a separate bug.
Comment 4 Michael Catanzaro 2016-10-31 21:58:31 UTC
The following fixes have been pushed:
4350e43 Refresh completion model actions if smart bookmark changes
7ca661d Filter smart bookmarks out of bookmarks popover
25a9993 Restore smart bookmarks
Comment 5 Michael Catanzaro 2016-10-31 21:58:35 UTC
Created attachment 338861 [details] [review]
Refresh completion model actions if smart bookmark changes
Comment 6 Michael Catanzaro 2016-10-31 21:58:39 UTC
Created attachment 338862 [details] [review]
Filter smart bookmarks out of bookmarks popover
Comment 7 Michael Catanzaro 2016-10-31 21:58:44 UTC
Created attachment 338863 [details] [review]
Restore smart bookmarks

It works exactly the same as before. If the bookmark includes %s, add it
to the completion model.
Comment 8 Michael Catanzaro 2016-10-31 22:03:23 UTC
(In reply to Michael Catanzaro from comment #1)
> Since it has to be reimplemented from scratch, hopefully I will take the
> time to do it properly: as a search engine configuration preferences dialog,
> completely separate from the bookmarks subsystem.

Actually I only want the dialog now. Turns out using the bookmarks subsystem for this is way easier than adding one more thing that needs to be synced, stolen into incognito mode, etc.