Refresh completion model actions if smart bookmark changes

https://bugzilla.gnome.org/show_bug.cgi?id=772407